# ChangeLog for sys-fs/udev
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/sys-fs/cvs-repo/gentoo-x86/sys-fs/udev/ChangeLog,v 1.453 2009/02/25 12:50:07 zzam Exp $

  25 Feb 2009; Matthias Schwarzott <zzam@gentoo.org> udev-9999.ebuild:
  Fix dialout permissions also for udev-9999 ebuild.

  23 Feb 2009; Matthias Schwarzott <zzam@gentoo.org>
  files/136/udev-postmount.initd:
  Typo.

  21 Feb 2009; Matthias Schwarzott <zzam@gentoo.org> files/136/udev.confd,
  files/136/udev.initd, files/136/udev-mount.initd,
  files/136/udev-postmount.initd:
  Add option to disable persistent-cd. Make read-only root not fatal in
  udev-postmount. Bug #259495. Allow silencing unreliable kernel/udev
  warning.

  20 Feb 2009; Jeroen Roovers <jer@gentoo.org> udev-135-r4.ebuild:
  Revert to ~alpha and ~hppa (bug #254616 comment #6).

  19 Feb 2009; Matthias Schwarzott <zzam@gentoo.org>
  files/136/udev-mount.initd:
  Set permission bits correct for seeding dev. Also create /dev/kmsg before
  running udevd so it can write messages to dmesg.

*udev-138 (19 Feb 2009)

  19 Feb 2009; Matthias Schwarzott <zzam@gentoo.org>
  -files/udev-136-fix-ide-cd-rule.diff, -files/udev-137-rules-update.diff,
  -udev-136.ebuild, -udev-137.ebuild, +udev-138.ebuild:
  Version bumped. This is a bugfix release. Now block devices are watched
  via inotify and trigger persistent storage links to be updated after write
  access. Removed older versions.

  13 Feb 2009; Tobias Klausmann <klausman@gentoo.org> udev-135-r4.ebuild:
  Stable on alpha, bug #254616

  12 Feb 2009; Jeroen Roovers <jer@gentoo.org> udev-135-r4.ebuild:
  Stable for HPPA (bug #254616).

  27 Jan 2009; Matthias Schwarzott <zzam@gentoo.org>
  files/udev-137-rules-update.diff, udev-137.ebuild, udev-9999.ebuild:
  Cleanup depends. Add missing depends for documentation processing of
  udev-9999. Fix kernel version check of udev-9999. Update rules patch for