@@ -70,6 +70,7 @@ DIST udev-130.tar.bz2 442846 RMD160 6b941866b224396792a34db9aa2da0d44dace509 SHA
 DIST udev-133.tar.bz2 445588 RMD160 c1f2cdbcd168c6d44bb9ff673e2d73e52bde3aa7 SHA1 c0fe38d1552e3710df5418f7811f0a4c0e405e5a SHA256 fe4785fe93e27be05ded15414e3f590b0cbc309400f9cc461a27d20c042f62a8
 DIST udev-135.tar.bz2 446675 RMD160 c56d146e0d56e140f7c6dd9294673259d27b162c SHA1 dd3c439279312c6f9594800ca73e84f367d2903a SHA256 acbb5e7d322253ed242f28fbc1974bd34a4da7c29275e17cd5b32b38b2a5c849
 DIST udev-138.tar.bz2 448611 RMD160 5be1fed7f4ec2ca6953536f9ada982e36db3ca64 SHA1 8b96b5d80782f4f636a13fb1cba7efd7c4c37fc0 SHA256 bc525a4d6bdbace1b23433256643cc331e4049e1e2442333707e6d2ba8a173b4
+DIST udev-139.tar.bz2 450006 RMD160 cb3e5c7d557b6fd0aa93e9717cc1b87a82586c4e SHA1 678eec992c84ce96f40b5a3264651a8b55dedd94 SHA256 6786a896146b12323d0ef31601dc23b6e5501762d7d61c475d09e405494c21df
 EBUILD udev-114.ebuild 9031 RMD160 1b7e45d1a384c52a336727a17e6fbd087855fb34 SHA1 207b330f01cb9970eee14b4c39b7bf2d5b9ce181 SHA256 f45fda83e1308079b9d932586b07acf2d7bf65527f8b414c8d43738fd0c129e5
 EBUILD udev-115-r1.ebuild 10108 RMD160 86ec04530480872e2ac1fbb2fa37fa2819639752 SHA1 1021b13461ac7625f97a60634982416c2a8dddc4 SHA256 765135b405bd90ee6c527c0be00e87c12400121e30261de9ba6d3e4a3c50f872
 EBUILD udev-119.ebuild 10145 RMD160 7b978b270ce5d39443310b7da58aa5ff4bdd02f9 SHA1 fdd10d47bb62517d78f0e7d811903203b4cc3d8e SHA256 2998cfa7681f16132aaad0a8a033e83418c4e418430cabf5ebf1d8631fcc58bd
@@ -84,13 +85,14 @@ EBUILD udev-135-r3.ebuild 11230 RMD160 b1bfe5d74055ee6161a8881b38515e535e56519f 
 EBUILD udev-135-r4.ebuild 11328 RMD160 4b809596611cf6decc02afcfc8523e3c8dd2b759 SHA1 51ad6f0cb5ded99ae4b3accb4d0b05e58677a8d0 SHA256 06821ebaad0236cd2d71398976c85ac6173931f1f6b4212c7852965e2989a7ac
 EBUILD udev-135.ebuild 12079 RMD160 88554ff3379d6d74c0537a0848b71e346e5a6108 SHA1 1d2375e4eb0516e4015b534ac4ecb848e8ed5df9 SHA256 8cd73c178e60d06862bbe99f02e86cf0d517edcad6faa5dd0ffe57863355bdb9
 EBUILD udev-138.ebuild 12247 RMD160 6f419cdc60571ed69b9832101d9dd38b067e15a1 SHA1 0374fc0a03163255f7bf347c47212327815d196b SHA256 cd34e393b78ff4003d5c1691f82bc4731d474682c9f6930fe2445be995b504f0
+EBUILD udev-139.ebuild 12247 RMD160 7e0f9f444debd034269b239caf474abb284f018c SHA1 114e057db09e9779ef9a90b37fb62802d1115131 SHA256 44152d8440f6bb8c8c540d5906b4a3d922a7f1ed753184462cc00a00d710eea0
 EBUILD udev-9999.ebuild 12172 RMD160 a7671070cb3666ddae8da3640fdcc335201e1ade SHA1 a62d36bac7e3bbf9f2fa0ffb1bd8c128c2536f5d SHA256 00fdf03591ecbd5ca71fdc44ff31c91c8fb4447e9f0d1fe6538967634d711798
-MISC ChangeLog 93390 RMD160 6ec245bad6f66d43b11a50d2f4726eb4d64f902d SHA1 594f679c09851768684d903cd7c3d0022901b5b1 SHA256 5c04b8ed89480c0d34d084c3924f8ff96cb212f20868e110e40d53c07cfbf164
+MISC ChangeLog 93505 RMD160 0ee31d8d9ef303a374714c1f3cfdceaac7efae26 SHA1 0342bfecab1a83253202ba76707199cea7330613 SHA256 ee4227cae17d0e7dc61b4267a3964c5ce7c1c0500de37c3a55e2dcb16840bf03
 MISC metadata.xml 225 RMD160 9459d2b2027607874431067a9100c48a0a128ffa SHA1 d9fad1caa18dd065595932b9e5d6c18098f3dfad SHA256 dd3c55c5a5c97678030df2554192894d849cdd4845d6fec1c8259d7bf263cd46
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.10 (GNU/Linux)
 
-iEYEARECAAYFAkmlPoUACgkQt2vP6XvVdOfknQCffBugMgeWCXvKkghDdDBrVS9v
-2esAoNlY3p+ahRFRPCw3BPXv64L9E++o
-=7Nvs
+iEYEARECAAYFAkmnHR8ACgkQt2vP6XvVdOdS2wCeK2wd+U/O8tsnHtNdp2NJRLG4
+J7QAoJ8nLiOgGnK0oMv6drAB2fLO8jDB
+=SmvA
 -----END PGP SIGNATURE-----
